# ChangeLog for games-sports/etw
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  26 May 2008; Piotr Szymaniak <lazy_bum@o2.pl> +etw-3.6.ebuild:
  New package (thanks to Richie, bug #130952).
