@@ -1,4 +1,4 @@
 DIST ETW-3.6-src.tar.gz 270316 RMD160 9b30bc5fef6cd8f976fa496a951e587223047291 SHA1 bd1446431814cd95476afa879faf0cffc42d739c SHA256 f36c14274c9c9da077cbf62f949e0f4eda60608a152dbdb440b9a1625b5ce35e
 DIST EatTheWhistle-linux-x86.tar.gz 8312306 RMD160 9d43ff68c9180a3703a8a90d29ee49db6eb9914e SHA1 891489b200dbabf238f32f8697e76b92623cd57f SHA256 43d2f8a9f29217a187e2802c3d28197f949e211aa9643dc38bd1b20c63e5b4fc
-EBUILD etw-3.6.ebuild 1129 RMD160 4b2490df4fc33947d0f3d3479821d79dc7376751 SHA1 5870801b0397700f89dd330577dc3ad33fedb1c0 SHA256 3444b5949e90fc2b40d52446cbde3ca4752b1a734e523e714b16d01653bf81df
-MISC ChangeLog 230 RMD160 8882045c49450579c2bb14ee73399e86b4af2805 SHA1 b7a1cf9603fe3e904f2a6cf22f0f796b82c8244c SHA256 b5669514ad5c54318c07061ddd47eb640c84694de9f1e226f211c933b6840b58
+EBUILD etw-3.6.ebuild 1132 RMD160 60fdaf162e8c568b4a13b78faee38f9078bccfa2 SHA1 de02903754df2b4ec4a4a68c6d67307e4e82ac44 SHA256 24a8cfb7ce17c34592e13274c19692510cdae18a5b0b53d9fb319cedc2f0257e
+MISC ChangeLog 333 RMD160 c0a731fa81ca83d32949add05ebe8208bf203acf SHA1 ce7c95d4b5e5df636725bce1813bc0853c1b1ba7 SHA256 337bc55fdd19e583e3721933cf15283226b3a8ab7c620f1b17d5d7cf1848b580
